appId: app.vaultaire.ios
---
# Delete a file from full screen viewer
- runFlow: ../helpers/launch_with_files.yaml

# Open photo
- tapOn:
    point: "20%, 34%"
- assertVisible:
    id: "viewer_done"

# Actions -> Delete
- tapOn:
    id: "viewer_actions"
- tapOn:
    text: "Delete"

# Confirm deletion
- tapOn:
    text: "Delete"
