appId: app.vaultaire.ios
---
# Export a file from full screen viewer
- runFlow: ../helpers/launch_with_files.yaml

# Open photo
- tapOn:
    point: "20%, 34%"
- assertVisible:
    id: "viewer_done"

# Actions -> Export
- tapOn:
    id: "viewer_actions"
- tapOn:
    text: "Export"

# Confirm export warning
- tapOn:
    text: "Export"
